2004-01-16  Julien MOUTTE <julien@moutte.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_set_video_property): Removing a warning when
	slider reaches the edges.

2004-01-16  Julien MOUTTE <julien@moutte.net>

	* data/totem.schemas.in: Adding hue and saturation gconf keys.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_new): Removing
	some debugging g_message.
	* src/bacon-video-widget-xine.c: (setup_config_stream): Fixing my own
	stupidity... i will write a 1000 times "i should not commit before
	having compiled with --enable-xine at least only once."

2004-01-15  Julien MOUTTE <julien@moutte.net>

	* data/totem.glade: Adding saturation and hue slider transforming the
	display notebook in a real colorbalance configuration interface.
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property), (bacon_video_widget_new):
	Implementing colorbalance and software sound mixer.
	* src/bacon-video-widget-xine.c: Implementing hue and saturation.
	* src/bacon-video-widget.h: Adding hue and saturation.
	* src/totem-preferences.c: (saturation_changed), (hue_changed),
	(totem_setup_preferences), (totem_preferences_visuals_setup):
	Integrating the 2 new sliders for hue and saturation.

2004-01-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* src/totem.c: (on_open1_activate): allow the user to cancel the open
	(Closes: #131323)

2004-01-12  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_video_property),
	(bacon_video_widget_set_video_property), (bacon_video_widget_new):
	Implementing brightness and contrast setting/getting thanks to the
	colorbalance interface in xvimagesink.

2004-01-12  Julien MOUTTE  <julien@moutte.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_visuals_quality): Removing the visual quality
	warning. I ll fix that later with filtered caps.

2004-01-10  Julien MOUTTE  <julien@moutte.net>
