@@ -1,3 +1,10 @@
+2004-01-18  Julien MOUTTE  <julien@moutte.net>
+
+	* src/bacon-v4l-selection.h:
+	* src/gnome-caption-table.h:
+	* src/totem-preferences.h:
+	* src/totem.h: Fixing some compilation warnings.
+
 2004-01-16  Julien MOUTTE <julien@moutte.net>
 
 	* src/bacon-video-widget-xine.c:
